--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-plugin-component": "^1.1.1",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "mint-ui": "^2.2.13",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "vue": "^2.5.21",
